// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentView renders for selected tool = stores 1`] = `
<DocumentFragment>
  <main
    class="main"
  >
    <mock-storestree
      deps="[object Object]"
      state="[object Object]"
    />
  </main>
</DocumentFragment>
`;

exports[`CurrentView renders for selected tool = stores: StoresTree props 1`] = `
{
  "deps": {},
  "state": {
    "debugToolsNavStoreData": {
      "selectedTool": "stores",
    },
  },
}
`;

exports[`CurrentView renders for selected tool = stores: TelemetryViewer props 1`] = `undefined`;

exports[`CurrentView renders for selected tool = telemetryViewer 1`] = `
<DocumentFragment>
  <main
    class="main"
  >
    <mock-telemetryviewer
      deps="[object Object]"
      state="[object Object]"
    />
  </main>
</DocumentFragment>
`;

exports[`CurrentView renders for selected tool = telemetryViewer: StoresTree props 1`] = `undefined`;

exports[`CurrentView renders for selected tool = telemetryViewer: TelemetryViewer props 1`] = `
{
  "deps": {},
  "state": {
    "debugToolsNavStoreData": {
      "selectedTool": "telemetryViewer",
    },
  },
}
`;
